[package]
name = "bufferizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6"
actix-redis = "0.12"
awc = { version = "3", features = ["rustls"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
jsonwebtoken = "8.1"
mongodb = { version = "2.3", features = ["tokio-runtime"] }
r2d2 = "0.8"
rand = "0.8.5"
redis-async = "0.13"
sentry = "0.27.0"
sentry-actix = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
