[package]
name = "social-post-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
jsonwebtoken = "8.1"
log = "0.4"
mongodb = { version = "2.3", features = ["tokio-runtime"] }
rand = "0.8.5"
redis = { version = "0.21.6" }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis", "mongodb"] }
rocket-sentry = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["macros", "time"] }
url = "2.3"



# bson = { version = "2", features = ["chrono-0_4"] }
# chrono = "0.4"
# futures-util = { version = "0.3", default-features = false, features = ["std"] }

# redis-async = "0.13"
